test/parse/relaxed/bad/nospaceafterliteral.cnf
p cnf 2 3
1 0
-1 -2 0
3 2X 1 0
